--- a/11.1
+++ b/11.1
@@ -11,6 +11,7 @@
        }
        }
           integer count1 = 0;
+	  integer count2 = 1;
       for  (String s : listOfIntegers) // для каждого значения из списка стрингов
 	     {
                integerList.add(Integer.valueOf(s)); // добавить как интеджер в список интеджеров
